--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/src/DKP.ico" />
+    <link rel="icon" href="/asset/DKP.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>KHWeather</title>
   </head>
